--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,25 @@
+asgiref==3.5.2
+boto3==1.24.56
+botocore==1.27.56
+certifi @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_83242e7e-f82d-4a71-8ef2-9d71d212d249gu_wxmeq/croots/recipe/certifi_1655968827803/work/certifi
+cffi==1.15.1
+charset-normalizer==2.1.0
+cryptography==37.0.4
+defusedxml==0.7.1
 Django==4.0.6
+django-allauth==0.51.0
 django-cors-headers==3.13.0
+idna==3.3
+jmespath==1.0.1
+oauthlib==3.2.0
+pycparser==2.21
+PyJWT==2.4.0
 PyMySQL==1.0.2
+python-dateutil==2.8.2
+python3-openid==3.2.0
+requests==2.28.1
+requests-oauthlib==1.3.1
+s3transfer==0.6.0
+six==1.16.0
+sqlparse==0.4.2
+urllib3==1.26.10
